<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@color/white" >
    </FrameLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#D7D7D7" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bottom_height"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <LinearLayout
            android:id="@+id/view_index_first"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_index_first"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/m1_defult" />

            <TextView
                android:id="@+id/tv_index_first"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/index_first"
                android:textColor="@color/bar_txt_default"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_index_second"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_index_second"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/m2_defult" />

            <TextView
                android:id="@+id/tv_index_second"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/index_second"
                android:textColor="@color/bar_txt_default"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_index_third"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_index_third"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/m3_defult" />

            <TextView
                android:id="@+id/tv_index_third"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/index_third"
                android:textColor="@color/bar_txt_default"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
