<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_height"
        android:orientation="horizontal"
        android:background="@color/app_maincolor" >

        <TextView
            android:id="@+id/tv_tital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/index_third"
            android:textColor="@color/white"
            android:textSize="@dimen/topbar_title_size"
            android:singleLine="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ellipsize="end"/>

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:src="@drawable/search"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line_belowTop"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:orientation="horizontal"
                android:background="#fde8e9"
                android:layout_marginTop="10dp">
                <View
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:background="@color/app_maincolor"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:textSize="17dp"
                    android:textColor="@color/law_black"
                    android:text="@string/xingshi"/>
            </LinearLayout>
            <com.honghui.dbmovie.widget.MyGridView
                android:id="@+id/gv_xingshi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="4"
                android:horizontalSpacing="10dp"
                android:verticalSpacing="5dp"
                android:cacheColorHint="#00000000"
                android:fadingEdge="none"
                android:listSelector="@color/transparent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:orientation="horizontal"
                android:background="#fde8e9"
                android:layout_marginTop="20dp">
                <View
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:background="@color/app_maincolor"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:textSize="17dp"
                    android:textColor="@color/law_black"
                    android:text="@string/leixing"/>
            </LinearLayout>
            <com.honghui.dbmovie.widget.MyGridView
                android:id="@+id/gv_leixing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="4"
                android:horizontalSpacing="10dp"
                android:verticalSpacing="5dp"
                android:cacheColorHint="#00000000"
                android:fadingEdge="none"
                android:listSelector="@color/transparent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:orientation="horizontal"
                android:background="#fde8e9"
                android:layout_marginTop="20dp">
                <View
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:background="@color/app_maincolor"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:textSize="17dp"
                    android:textColor="@color/law_black"
                    android:text="@string/diqu"/>
            </LinearLayout>
            <com.honghui.dbmovie.widget.MyGridView
                android:id="@+id/gv_diqu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="4"
                android:horizontalSpacing="10dp"
                android:verticalSpacing="5dp"
                android:cacheColorHint="#00000000"
                android:fadingEdge="none"
                android:listSelector="@color/transparent"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>