<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_height"
        android:orientation="horizontal"
        android:background="@color/app_maincolor" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back"/>

        <TextView
            android:id="@+id/tv_tital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/topbar_title_size"
            android:singleLine="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ellipsize="end"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/rl_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_maincolor"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/iv_img"
                    android:layout_width="110dp"
                    android:layout_height="145dp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_load_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/law_black2"
                android:textSize="15dp"
                android:layout_below="@+id/rl_top"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"/>

            <RelativeLayout
                android:id="@+id/rl_detail_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_top"
                android:layout_marginTop="15dp"
                android:visibility="gone"
                android:paddingBottom="15dp">
                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="Title"
                    android:textSize="21dp"
                    android:textColor="@color/law_black"/>

                <TextView
                    android:id="@+id/tv_info1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:text=""
                    android:textSize="13dp"
                    android:textColor="@color/law_black2"
                    android:layout_below="@+id/tv_movie_title"
                    android:minHeight="60dp"/>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:background="@drawable/block_bg"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/db_pingfeng"
                        android:textColor="@color/law_black2"
                        android:textSize="12dp"/>
                    <TextView
                        android:id="@+id/tv_pingfeng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0"
                        android:textColor="@color/law_black"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        />
                    <LinearLayout
                        android:id="@+id/ll_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <ImageView
                            android:id="@+id/iv_start1"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:src="@drawable/start0"
                            android:scaleType="centerInside"/>
                        <ImageView
                            android:id="@+id/iv_start2"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:src="@drawable/start0"
                            android:layout_marginLeft="3dp"
                            android:scaleType="centerInside"/>
                        <ImageView
                            android:id="@+id/iv_start3"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:src="@drawable/start0"
                            android:layout_marginLeft="3dp"
                            android:scaleType="centerInside"/>
                        <ImageView
                            android:id="@+id/iv_start4"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:src="@drawable/start0"
                            android:layout_marginLeft="3dp"
                            android:scaleType="centerInside"/>
                        <ImageView
                            android:id="@+id/iv_start5"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:src="@drawable/start0"
                            android:layout_marginLeft="3dp"
                            android:scaleType="centerInside"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tv_ratings_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0人"
                        android:textColor="@color/law_black2"
                        android:textSize="12dp"/>
                </LinearLayout>

                <View
                    android:id="@+id/view_line1"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@+id/tv_info1"
                    android:background="@color/line"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>
                <TextView
                    android:id="@+id/tv_jianjie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jianjie"
                    android:textSize="14dp"
                    android:textColor="@color/law_black"
                    android:layout_below="@+id/view_line1"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

                <TextView
                    android:id="@+id/tv_jianji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="xxxxxxx"
                    android:textSize="13dp"
                    android:textColor="@color/law_black2"
                    android:layout_below="@+id/tv_jianjie_title"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

                <View
                    android:id="@+id/view_line2"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@+id/tv_jianji"
                    android:background="@color/line"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

                <TextView
                    android:id="@+id/tv_yinren_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yingren"
                    android:textSize="14dp"
                    android:textColor="@color/law_black"
                    android:layout_below="@+id/view_line2"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_yinren_title"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:scrollbars="none">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/ll_yangyuang">

                    </LinearLayout>
                </HorizontalScrollView>
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

</LinearLayout>